--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,41 +1,106 @@
-body {
-    background: black;
-  }
-  .subheader {
-    width: 100%;
-    height: 28px;
-    line-height: 28px;
-    letter-spacing: 1px;
-    background: #e0dad4;
-    color: #867261;
-    overflow: hidden;
-    position: relative;
-    div {
-      display: block;
-      width: 200%;
-      position: absolute;
-      overflow: hidden;
-      animation: slideInAndOut 40s linear infinite;
-      &:hover {
-        animation-play-state: paused;
-      }
-    }
-    span {
-      float: left;
-      width: 50%;
-    }
-    a {
-      color: #f09000;
-      &:hover {
-        color: #867261;
-      }
-    }
-  }
-  @keyframes slideInAndOut {
-    0% { left: 0; }
-    100% { left: -100%; }
-  }
+/* (A) FIXED WRAPPER */
+.hwrap {
+  overflow: hidden; /* HIDE SCROLL BAR */
+  background: #eee;
+}
+ 
+/* (B) MOVING TICKER WRAPPER */
+.hmove { display: flex; }
 
-  .container {
-      background-color: yellow;
-  }
+/* (C) ITEMS - INTO A LONG HORIZONTAL ROW */
+.hitem {
+  flex-shrink: 0;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 10px;
+  text-align: center;
+}
+ 
+/* (D) ANIMATION - MOVE ITEMS FROM RIGHT TO LEFT */
+/* 4 ITEMS -400%, CHANGE THIS IF YOU ADD/REMOVE ITEMS */
+@keyframes tickerh {
+  0% { transform: translate3d(100%, 0, 0); }
+  100% { transform: translate3d(-400%, 0, 0); }
+}
+.hmove { animation: tickerh linear 45s infinite; }
+.hmove:hover { animation-play-state: paused; }
+
+
+/*vertical ticker*/
+/* (A) STANDARD ROW HEIGHT */
+.vwrap, .vitem {
+  height: 30px;
+  line-height: 30px;
+}
+ 
+/* (B) FIXED WRAPPER */
+.vwrap {
+  overflow: hidden; /* HIDE SCROLL BAR */
+  background: #eee;
+}
+/* (C) TICKER ITEMS */
+.vitem { text-align: center; }
+ 
+/* (D) ANIMATION - MOVE ITEMS FROM TOP TO BOTTOM */
+/* CHANGE KEYFRAMES IF YOU ADD/REMOVE ITEMS */
+.vmove { position: relative; }
+@keyframes tickerv {
+  0% { bottom: 0; } /* FIRST ITEM */
+  30% { bottom: 30px; } /* SECOND ITEM */
+  60% { bottom: 60px; } /* THIRD ITEM */
+  90% { bottom: 90px; } /* FORTH ITEM */
+  100% { bottom: 0; } /* BACK TO FIRST */
+}
+.vmove {
+  animation-name: tickerv;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
+  animation-timing-function: cubic-bezier(1, 0, .5, 0);
+}
+.vmove:hover { animation-play-state: paused; }
+
+/*DIVIDERS*/
+.divider {
+  padding: 25px;
+}
+
+.divider2 {
+  padding: 15px;
+}
+
+.divider3 {
+  padding: 1px;
+}
+
+
+
+
+/*CARDS*/
+.card {
+  text-align: center;
+}
+
+.cardsection {
+  text-align: center;
+  margin-left: 10%;
+  margin-right: 4%;
+}
+
+.row {
+  text-align: center;
+}
+
+.col {
+  text-align: center;
+}
+
+/*Image*/
+.img {
+  width: 10px;
+  height: 10px;
+}
+
+/*PLANS*/
+.plan1 {
+  text-align: center;
+}
